crates/pixi_build_mojo/src/snapshots/pixi_build_mojo__tests__env_vars_are_set.snap
---
source: crates/pixi_build_mojo/src/main.rs
expression: generated_recipe.recipe.build.script
---
env:
  foo: bar
content: "[ ... script ... ]"
