crates/pixi_build_mojo/src/snapshots/pixi_build_mojo__tests__input_globs_includes_extra_globs.snap
---
source: crates/pixi_build_mojo/src/main.rs
expression: result
---
Ok(
    [
        "**/*.mojo",
        "**/.c",
    ],
)
